# monorepo_core

./: .gitignore  AUTONOMY_DOCS_VALID.md  ENFORCEMENT_GUIDE.md  MCP_DOCUMENTATION_GUIDE.md  MONITORING_DOCS_GUIDE.md  OPERATIONS.md  POLICY_API.md  README.md  actionable_logic_test_log.txt  add_version.py  all_tests_log.txt  cooperative_intelligence.py  counterfactual_team_evaluator.py  demo_output.txt  demo_res.txt  docker-compose.monitoring.yml  entropy_module_walkthrough.md  error.txt  final_output.txt  final_verification_log.txt  fix_shared_utils_imports.py  fix_task_formation.py  fix_tests_imports.py  fix_tomls.py  main.py  matching_engine.py  orchestrate.py  output.txt  package-lock.json  package.json  prompts_to_build_the_hands.md  pyproject.toml  requirements.txt  simulation_layer_test_log.txt  synergy_forecast_simulator.py  task_formation_test_log.txt  test_autonomy_core.py  test_chaos.py  test_integrated_system.py  test_matching_engine.py  (+1 more)
.github/workflows/: ci.yml
a2a_coordination/: README_API.md  package.json
actionable_logic/: README.md  policy_repository.db  requirements.txt  test_policy_repository.db
actionable_logic/tests/: test_adaptive_guardrails.py  test_feedback_connector.py  test_policy_api.py  test_version_control.py  (+2 more)
autonomy_server/: pyproject.toml
docs/: openapi_spec.yaml
economic_autonomy/: package.json  tsconfig.json
enforcement_layer/: package.json  test.ts
identity_system/: README.md  README_PROTOCOL.md  demo_output_v4.txt  package.json  tsconfig.json
integration_tests/: conftest.py  test_unified_runtime_e2e.py
scorring_module/: demo_output.txt  package.json
self_improvement_governance/: final_output.txt  package.json  tsconfig.json
src/: ApprovalRoutingEngine.ts  AuthorityGraphBuilder.ts  BudgetPnLAPI.ts  ComplianceEstimator.ts  DecisionEvaluationFramework.ts  DecisionObject.ts  DelegationControlModule.ts  DynamicBudgetEngine.ts  OrganizationalGraphEngine.ts  OverrideLearningLayer.ts  PnLTracker.ts  PreExecutionBudgetGate.js  PreExecutionBudgetGate.ts  PreemptiveDetectionLayer.ts  RiskScoringEngine.ts  TreasuryEngine.ts  demo.ts  feedback_demo.d.ts.map  index.ts  propagation-demo.ts  treasury_demo.js.map  visualization_demo.d.ts.map  visualization_demo.js
task_formation/: cooperative_intelligence.py  entropy_constraint_module.py  team_optimizer.py
tests/: test_dependency_chain.py  test_entropy_stress_test.py  test_repository.py  test_synergy_forecast_simulator.py  test_system_health.py  test_system_integrity.py  test_version_control.py
(+146 files in other folders)
