[project]
name = "agent-infra-monorepo"
version = "1.0.0"
description = "Consolidated Python dependencies for agent-infrastructure monorepo"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
]

[tool.setuptools]
packages = [
    "a2a_coordination",
    "actionable_logic",
    "economic_autonomy",
    "enforcement_layer",
    "identity_system",
    "scorring_module",
    "self_improvement_governance",
    "shared_utils",
    "simulation_layer",
    "task_formation",
    "autonomy_core",
    "autonomy_sdk",
    "autonomy_server",
]

[tool.setuptools.package-dir]
"a2a_coordination" = "packages/a2a_coordination/a2a_coordination"
"actionable_logic" = "packages/actionable_logic/actionable_logic"
"economic_autonomy" = "packages/economic_autonomy/economic_autonomy"
"enforcement_layer" = "packages/enforcement_layer/enforcement_layer"
"identity_system" = "packages/identity_system/identity_system"
"scorring_module" = "packages/scorring_module/scorring_module"
"self_improvement_governance" = "packages/self_improvement_governance/self_improvement_governance"
"shared_utils" = "packages/shared_utils/shared_utils"
"simulation_layer" = "packages/simulation_layer/simulation_layer"
"task_formation" = "packages/task_formation/task_formation"
"autonomy_core" = "packages/autonomy_core/autonomy_core"
"autonomy_sdk" = "packages/autonomy_sdk/autonomy_sdk"
"autonomy_server" = "apps/autonomy_server/autonomy_server"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = [
    "tests",
    "packages/*/tests",
    "apps/*/tests",
]



